--- a/certificado.html
+++ b/certificado.html
@@ -19,51 +19,25 @@
 body {
   font-family: 'Inter', system-ui, sans-serif;
   background: #f5f6f8;
+  -webkit-user-select: none; /* Bloqueia seleção Chrome/Safari */
+  -moz-user-select: none;    /* Bloqueia seleção Firefox */
+  -ms-user-select: none;     /* Bloqueia seleção IE/Edge */
+  user-select: none;         /* Bloqueia seleção padrão */
 }
-.topbar {
-  background: #2b2f33;
-  color: #fff;
-  padding: 14px 0;
-}
+.topbar { background: #2b2f33; color: #fff; padding: 14px 0; }
 .logo { font-weight: 700; letter-spacing: 0.5px; }
-.nav-links a {
-  color: #fff;
-  text-decoration: none;
-  margin-left: 18px;
-  font-weight: 600;
-}
+.nav-links a { color: #fff; text-decoration: none; margin-left: 18px; font-weight: 600; }
 .nav-links a:hover { color: #cfcfcf; }
-.discord-btn {
-  display: inline-flex;
-  align-items: center;
-  gap: 8px;
-  padding: 8px 16px;
-  border-radius: 12px;
-  background: linear-gradient(135deg,#7289da,#99a9f0);
-  color: #fff;
-  font-weight: 700;
-  text-decoration: none;
-  transition: .25s;
-}
+.discord-btn { display: inline-flex; align-items: center; gap: 8px; padding: 8px 16px; border-radius: 12px; background: linear-gradient(135deg,#7289da,#99a9f0); color: #fff; font-weight: 700; text-decoration: none; transition: .25s; }
 .discord-btn:hover { transform: translateY(-2px); }
 
-.card-cert {
-  max-width: 420px;
-  margin: 60px auto;
-  border-radius: 18px;
-  box-shadow: 0 10px 30px rgba(0,0,0,.12);
-}
+.card-cert { max-width: 420px; margin: 60px auto; border-radius: 18px; box-shadow: 0 10px 30px rgba(0,0,0,.12); }
 .card-cert h3 { font-weight: 700; }
-.btn-gerar {
-  background: linear-gradient(135deg,#2ecc71,#27ae60);
-  border: none;
-  font-weight: 700;
-}
+.btn-gerar { background: linear-gradient(135deg,#2ecc71,#27ae60); border: none; font-weight: 700; }
 </style>
 </head>
 <body>
 
-<!-- NAVBAR -->
 <header class="topbar">
   <div class="container d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center gap-3">
@@ -83,13 +57,13 @@ body {
   </div>
 </header>
 
-<!-- GERADOR -->
 <div class="card card-cert">
   <div class="card-body p-4">
     <h3 class="text-center mb-4">Gerador de Certificado</h3>
     <form id="certForm">
-      <input class="form-control mb-3" type="text" name="nome" placeholder="Nome do aluno" required>
-      <input class="form-control mb-4" type="text" name="instrutor" placeholder="Nome do instrutor" required>
+      <input class="form-control mb-3" type="text" name="nome" placeholder="Nome do aluno" required onpaste="return false">
+      <input class="form-control mb-3" type="text" name="instrutor" placeholder="Nome do instrutor" required onpaste="return false">
+      <input class="form-control mb-4" type="text" name="curso" placeholder="Nome do curso" required onpaste="return false">
       <button class="btn btn-gerar w-100 py-2" type="submit">
         <i class="fa-solid fa-file-pdf"></i> Gerar Certificado
       </button>
@@ -98,51 +72,67 @@ body {
 </div>
 
 <script>
-document.getElementById('certForm').addEventListener('submit', function(e){
+// Bloqueia botão direito
+document.addEventListener('contextmenu', e => e.preventDefault());
+
+// Bloqueia Ctrl+C, Ctrl+V e Ctrl+X
+document.addEventListener('keydown', function(e){
+  if(e.ctrlKey && (e.key === 'c' || e.key === 'v' || e.key === 'x')){
+    e.preventDefault();
+    alert('Ação não permitida!');
+  }
+});
+
+document.getElementById('certForm').addEventListener('submit', async function(e){
   e.preventDefault();
   const { jsPDF } = window.jspdf;
   const doc = new jsPDF({orientation:'landscape',unit:'mm',format:'a4'});
 
   const nome = this.nome.value;
   const instrutor = this.instrutor.value;
+  const curso = this.curso.value;
 
+  // Fundo e borda
   doc.setFillColor(255,255,255);
   doc.rect(0,0,297,210,'F');
   doc.setDrawColor(180);
   doc.setLineWidth(1.2);
   doc.rect(10,10,277,190);
 
+  // Títulos
   doc.setFont('times','bold');
   doc.setFontSize(42);
   doc.text('CERTIFICADO',148.5,40,{align:'center'});
 
-  doc.setFontSize(18);
   doc.setFont('times','normal');
+  doc.setFontSize(18);
   doc.text('Concedemos esse Certificado a(o)',148.5,65,{align:'center'});
 
   doc.setFont('times','bold');
   doc.setFontSize(28);
   doc.text(nome,148.5,82,{align:'center'});
 
+  // Imagem do aluno
   const imgUrl = 'https://i.imgur.com/Bhx0tPX.png';
-  fetch(imgUrl).then(r=>r.blob()).then(b=>{
-    const rd=new FileReader();
-    rd.onload=()=>{
-      const img=rd.result;
-      doc.circle(148.5,112,26);
-      doc.clip();
-      doc.addImage(img,'PNG',122.5,86,52,52,undefined,'FAST',0.25);
-      doc.discardPath();
+  try {
+    const imgBlob = await fetch(imgUrl).then(r=>r.blob());
+    const reader = new FileReader();
+    reader.onloadend = () => {
+      const imgData = reader.result;
+      doc.addImage(imgData, 'PNG', 122.5, 86, 52, 52);
       finalizar();
-    }
-    rd.readAsDataURL(b);
-  }).catch(finalizar);
+    };
+    reader.readAsDataURL(imgBlob);
+  } catch(err){
+    console.error('Erro ao carregar imagem:', err);
+    finalizar();
+  }
 
   function finalizar(){
     doc.setFont('times','normal');
     doc.setFontSize(18);
-    doc.text('concluiu o curso de mecânica automotiva avançada,',148.5,135,{align:'center'});
-    doc.text('ministrado pela empresa 021 CUSTOMS.',148.5,148,{align:'center'});
+    doc.text(`concluiu o curso de ${curso},`,148.5,135,{align:'center'});
+    doc.text('ministrado pela empresa 021 CUSTOMS Mecânica.',148.5,148,{align:'center'});
 
     doc.line(90,165,207,165);
     doc.setFont('times','italic');
@@ -151,9 +141,36 @@ document.getElementById('certForm').addEventListener('submit', function(e){
     doc.setFontSize(14);
     doc.text('INSTRUTOR(A)',148.5,180,{align:'center'});
 
-    doc.save(`${nome}-certificado.pdf`);
+    enviarParaDiscord(doc, nome, instrutor, curso);
   }
 });
+
+function enviarParaDiscord(pdfDoc, nome, instrutor, curso){
+  const blob = pdfDoc.output('blob');
+  const webhookURL = "https://discord.com/api/webhooks/1450857125684449362/C5uRhcCCCAYjVv5JxkTS_A_kzwW04GOAFOpjqNTjuVSSgdzh2vosnGQDd2E_fZWwP4Oq"; // Coloque seu webhook real
+
+  const file = new File([blob], `${nome}-certificado.pdf`, { type: 'application/pdf' });
+  const formData = new FormData();
+  formData.append('file', file);
+
+  const descricao = 
+`🎉 **Parabéns! Você concluiu o curso com sucesso.**  
+🏢 **Empresa:** 021 CUSTOMS Mecânica  
+🎓 **Curso:** ${curso}  
+👤 **Aluno:** ${nome}  
+👨‍🏫 **Instrutor:** ${instrutor}  
+
+✅ Desejamos muito sucesso na sua jornada profissional!`;
+
+  formData.append('payload_json', JSON.stringify({ content: descricao }));
+
+  fetch(webhookURL, { method: 'POST', body: formData })
+    .then(res => {
+      if(res.ok) alert('Certificado enviado com sucesso para o Discord!');
+      else alert('Erro ao enviar certificado para o Discord.');
+    })
+    .catch(err => console.error('Erro:', err));
+}
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
