--- a/calculadora.html
+++ b/calculadora.html
@@ -81,6 +81,7 @@ button:hover {transform: scale(1.03);}
           <div class="form-check"><input class="form-check-input item" data-nome="Som do Motor" data-valor="40000" type="checkbox"><label> Som do Motor</label></div>
           <div class="form-check"><input class="form-check-input item" data-nome="Freio" data-valor="150000" type="checkbox"><label> Freio</label></div>
           <div class="form-check"><input class="form-check-input item" data-nome="Transmissão" data-valor="280000" type="checkbox"><label> Transmissão</label></div>
+          <div class="form-check"><input class="form-check-input item" data-nome="Suspensão" data-valor="40000" type="checkbox"><label> Suspensão</label></div>
           <div class="form-check"><input class="form-check-input item" data-nome="Turbo" data-valor="250000" type="checkbox"><label> Turbo</label></div>
           <div class="form-check"><input class="form-check-input item" data-nome="Hidráulica" data-valor="95000" type="checkbox"><label> Hidráulica</label></div>
           <div class="form-check"><input class="form-check-input item" data-nome="Blindagem" data-valor="400000" type="checkbox"><label> Blindagem</label></div>
@@ -236,3 +237,4 @@ document.addEventListener('keydown', e => {
 
 </body>
 </html>
+
