--- a/calculadora.html
+++ b/calculadora.html
@@ -134,9 +134,10 @@ button:hover {transform: scale(1.03);}
         <label>ID do Cliente</label>
         <input id="id" class="form-control mb-3">
 
+        <!-- CHECKBOX PARCERIA -->
         <div class="form-check mb-3">
           <input class="form-check-input" type="checkbox" id="parceria">
-          <label class="form-check-label" for="parceria">Parceria (10% de desconto)</label>
+          <label class="form-check-label" for="parceria">Parceria Polícia Militar (10% de desconto + reparo grátis nas viaturas)</label>
         </div>
 
         <label>Total</label>
@@ -197,7 +198,9 @@ function gerar(){
   if(parceria){
     const desconto = total * 0.10;
     total = total - desconto;
-    txt += `\n🤝 Parceria: 10% de desconto aplicado (-R$ ${desconto.toLocaleString("pt-BR")})`;
+    txt += `\n🤝 Parceria Polícia Militar aplicada!`;
+    txt += `\n- 10% de desconto (-R$ ${desconto.toLocaleString("pt-BR")})`;
+    txt += `\n- Reparo grátis nas viaturas`;
   }
 
   txt += `\n💰 TOTAL: R$ ${total.toLocaleString("pt-BR")}`;
