--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
   <div class="card-animated">
     <i class="fa-solid fa-coins glow-yellow"></i>
     <h3>Valores da Tabela</h3>
-    <p>É proibido cobrar valores acima ou abaixo da tabela. Infrações podem resultar em wipe ou banimento.</p>
+    <p>É proibido cobrar valores acima ou abaixo da tabela. Infrações podem resultar em removimendo da mecanica ou banimento da cidade.</p>
   </div>
 
   <div class="card-animated">
@@ -271,3 +271,4 @@ toggler.addEventListener('click', () => {
 
 </body>
 </html>
+
