--- a/tabela.html
+++ b/tabela.html
@@ -59,7 +59,7 @@ th{background:#f1f1f1}
 </div>
 
 <nav class="d-none d-md-flex nav-links align-items-center">
-<a href="#">Início</a>
+<a href="index.html">Início</a>
 
 <div class="dropdown">
 <span class="dropdown-toggle">Preços</span>
@@ -198,3 +198,4 @@ document.addEventListener('dragstart', e => e.preventDefault());
 
 </body>
 </html>
+
