--- a/calculadora.html
+++ b/calculadora.html
@@ -98,6 +98,7 @@ button:hover {transform: scale(1.03);}
           <div class="form-check"><input class="form-check-input item" data-nome="Painel" data-valor="40000" type="checkbox"><label> Painel</label></div>
           <div class="form-check"><input class="form-check-input item" data-nome="Buzina" data-valor="40000" type="checkbox"><label> Buzina</label></div>
           <div class="form-check"><input class="form-check-input item" data-nome="Grelha" data-valor="40000" type="checkbox"><label> Grelha</label></div>
+          <div class="form-check"><input class="form-check-input item" data-nome="Aerofolio" data-valor="40000" type="checkbox"><label> Aerofolio</label></div>
         </div>
       </div>
     </div>
@@ -276,4 +277,5 @@ document.addEventListener('keydown', e => {
 
 </body>
 </html>
+
 
