--- a/calculadora.html
+++ b/calculadora.html
@@ -98,7 +98,7 @@ button:hover {transform: scale(1.03);}
           <div class="form-check"><input class="form-check-input item" data-nome="Painel" data-valor="40000" type="checkbox"><label> Painel</label></div>
           <div class="form-check"><input class="form-check-input item" data-nome="Buzina" data-valor="40000" type="checkbox"><label> Buzina</label></div>
           <div class="form-check"><input class="form-check-input item" data-nome="Grelha" data-valor="40000" type="checkbox"><label> Grelha</label></div>
-          <div class="form-check"><input class="form-check-input item" data-nome="Aerofolio" data-valor="40000" type="checkbox"><label> Aerofolio</label></div>
+
         </div>
       </div>
     </div>
@@ -119,6 +119,8 @@ button:hover {transform: scale(1.03);}
           <div class="form-check"><input class="form-check-input item" data-nome="Fumaça" data-valor="40000" type="checkbox"><label> Fumaça</label></div>
           <div class="form-check"><input class="form-check-input item" data-nome="Vidro" data-valor="80000" type="checkbox"><label> Vidro</label></div>
           <div class="form-check"><input class="form-check-input item" data-nome="Insufilm" data-valor="60000" type="checkbox"><label> Insufilm</label></div>
+          <div class="form-check"><input class="form-check-input item" data-nome="Teto" data-valor="60000" type="checkbox"><label> Teto</label></di
+          <div class="form-check"><input class="form-check-input item" data-nome="Aerofolio" data-valor="40000" type="checkbox"><label> Aerofolio</label></div>
           <div class="form-check"><input class="form-check-input item" data-nome="Rodas nacionais" data-valor="40000" type="checkbox"><label> Rodas nacionais</label></div>
           <div class="form-check"><input class="form-check-input item" data-nome="Rodas importadas" data-valor="40000" type="checkbox"><label> Rodas importadas</label></div>
           <div class="form-check"><input class="form-check-input item" data-nome="Cor das rodas" data-valor="40000" type="checkbox"><label> Cor das rodas</label></div>
@@ -277,5 +279,6 @@ document.addEventListener('keydown', e => {
 
 </body>
 </html>
+
 
 
