--- a/calculadora.html
+++ b/calculadora.html
@@ -119,7 +119,7 @@ button:hover {transform: scale(1.03);}
           <div class="form-check"><input class="form-check-input item" data-nome="Fumaça" data-valor="40000" type="checkbox"><label> Fumaça</label></div>
           <div class="form-check"><input class="form-check-input item" data-nome="Vidro" data-valor="80000" type="checkbox"><label> Vidro</label></div>
           <div class="form-check"><input class="form-check-input item" data-nome="Insufilm" data-valor="60000" type="checkbox"><label> Insufilm</label></div>
-          <div class="form-check"><input class="form-check-input item" data-nome="Teto" data-valor="60000" type="checkbox"><label> Teto</label></di
+          <div class="form-check"><input class="form-check-input item" data-nome="Teto" data-valor="60000" type="checkbox"><label> Teto</label></div>
           <div class="form-check"><input class="form-check-input item" data-nome="Aerofolio" data-valor="40000" type="checkbox"><label> Aerofolio</label></div>
           <div class="form-check"><input class="form-check-input item" data-nome="Rodas nacionais" data-valor="40000" type="checkbox"><label> Rodas nacionais</label></div>
           <div class="form-check"><input class="form-check-input item" data-nome="Rodas importadas" data-valor="40000" type="checkbox"><label> Rodas importadas</label></div>
@@ -279,6 +279,7 @@ document.addEventListener('keydown', e => {
 
 </body>
 </html>
+
 
 
 
